Fixed some fallbacks, too much copy & paste

--- a/css/style.css
+++ b/css/style.css
@@ -633,18 +633,19 @@ object {
 .no-inlinesvg .RdioLink {background-image: url('images/Rdio.png');}
 .no-inlinesvg .SpotifyLink {background-image: url('images/Spotify.png');}
 .no-inlinesvg .LastFmLink {background-image: url('images/LastFm.png');}
-.no-inlinesvg .VimeoLink {background-image: url('images/Vine.png');}
+.no-inlinesvg .VineLink {background-image: url('images/Vine.png');}
 .no-inlinesvg .VimeoLink {background-image: url('images/Vimeo.png');}
 .no-inlinesvg .YouTubeLink {background-image: url('images/YouTube.png');}
-.no-inlinesvg .YouTubeLink {background-image: url('images/Kickstarter.png');}
+.no-inlinesvg .KickstarterLink {background-image: url('images/Kickstarter.png');}
 .no-inlinesvg .TumblrLink {background-image: url('images/Tumblr.png');}
-.no-inlinesvg .TumblrLink {background-image: url('images/WordPress.png');}
-.no-inlinesvg .TumblrLink {background-image: url('images/reddit.png');}
+.no-inlinesvg .WordPressLink {background-image: url('images/WordPress.png');}
+.no-inlinesvg .StackOverflowLink {background-image: url('images/StackOverflow.png');}
+.no-inlinesvg .redditLink {background-image: url('images/reddit.png');}
 .no-inlinesvg .GithubLink {background-image: url('images/GitHub.png');}
 .no-inlinesvg .RunkeeperLink {background-image: url('images/Runkeeper.png');}
 .no-inlinesvg .StravaLink {background-image: url('images/Strava.png');}
 .no-inlinesvg .FoursquareLink {background-image: url('images/Foursquare.png');}
-.no-inlinesvg .FoursquareLink {background-image: url('images/Yelp.png');}
+.no-inlinesvg .YelpLink {background-image: url('images/Yelp.png');}
 .no-inlinesvg .SlideShareLink {background-image: url('images/SlideShare.png');}
 .no-inlinesvg .ResearchGateLink {background-image: url('images/ResearchGate.png');}
 .no-inlinesvg .YouVersionLink {background-image: url('images/YouVersion.png');}
